--- a/docs/_includes/event_list.html
+++ b/docs/_includes/event_list.html
@@ -4,10 +4,14 @@
 	}
 </style>
 
+<a name="active"></a>
 <div class="accordion" id="current_event_accordion">
 	<div class="card border"><div class="card-header font-weight-bold">CURRENT EVENTS</div></div>
 </div>
+<div class="row invisible">~</div>
 <hr>
+<div class="row invisible">~</div>
+<a name="inactive"></a>
 <div class="accordion invisible" id="old_event_accordion">
 	<div class="card border"><div class="card-header font-weight-bold">INACTIVE EVENTS</div></div>
 </div>
@@ -23,79 +27,91 @@
 			var i = 0;
 			var firstDate = null;
 			var lastDate = null;
-			TourneySnapshot.forEach(function(EventSnapshot){
-				if (EventSnapshot.exists() && EventSnapshot.key != 'slugs'){
-					if (EventSnapshot.child('active').val()) {
-						var acc_name = 'current_event_accordion';
+			var eventList = Object.values(TourneySnapshot.val()); // convert to object, then array
+			eventList = eventList.slice(0,eventList.length-1) // remove 'slugs' child
+			console.log(eventList)
+			eventList.sort(function(a,b){
+				if (a.date[0] == b.date[0]){
+					if (a.date[1] == b.date[1]){
+						return a.date[2] - b.date[2];
 					} else {
-						var acc_name = 'old_event_accordion'
-						$('#old_event_accordion').removeClass('invisible')
+						return a.date[1]-b.date[1];
 					}
-
-					var eventPropicUrl = EventSnapshot.child('url_prof').val();
-					var eventBannerUrl = EventSnapshot.child('url_banner').val();
-		            if (eventPropicUrl == null){
-		              eventPropicUrl = "https://via.placeholder.com/100/81daea/6A5ACD?text="+EventSnapshot.child('name').val().slice(0,1);
-		            }
-
-					$('#'+acc_name).append(
-						'<div class="card border">' +
-						  '<div class="card-header" style="background-color:whitesmoke;">' +
-						    '<img src="'+eventPropicUrl+'" alt="img" class="rounded" style="height:5vw;">' +
-						    '<button class="btn text-sr-dark collapsed" type="button" data-toggle="collapse" aria-expanded="false"' +
-							    'data-target="#event_collapse_'+i+'" aria-controls="event_collapse_'+i+'" ' +
-							    'id="#event_header_'+i+'" style="box-shadow:none;">' +
-						           EventSnapshot.child('name').val() +
-						    '</button>' +
-						  '</div>' +
-
-						  '<div id="event_collapse_'+i+'" class="collapse" aria-labelledby="event_header_'+i+'" data-parent="#'+acc_name+'">' + 
-						    //'<div id="event_header_'+i+'" class="card-header">' +
-						    //'</div>' + 
-						    '<div id="event_body_'+i+'" class="card-body">' +
-						    '</div>' +
-						    '<div class="card-footer" id="event_date_'+i+'">'+
-						    '</div>' +
-						  '</div>' + 
-						'</div>'
-						);
-
-					
-					var eventDate = new Date(EventSnapshot.child('date').val()).toJSON().slice(0,10).replace(/-/g,'/');
-					var eventDateText = eventDate.slice(5,10)+'/'+eventDate.slice(0,4);
-					if (acc_name == 'current_event_accordion'){
-						if (firstDate == null){
-							firstDate = new Date(eventDate);
-						}
-						lastDate = new Date(eventDate);
-					}
-
-					var eventShortSlug = EventSnapshot.child('shortSlug').val();
-					var eventSlug = EventSnapshot.child('slug').val();
-					if (eventShortSlug == null){
-						eventShortSlug = eventSlug;
-					}
-
-					$('#event_body_'+i).append(
-						'<h5 class="card-title">' +
-						  EventSnapshot.child('name').val() +
-						'</h5>' +
-						'<h6 class="card-subtitle text-muted">' +
-						  EventSnapshot.child('numEntrants').val()+' Entrants   •   '+EventSnapshot.child('region').val() +
-						'</h6>' +
-						'<p class="card-text">' +
-						'</p>'
-						);
-					$('#event_date_'+i).html(
-						'<span class="text-muted">' + 
-						  eventDateText + 
-						'   •</span>   ' +
-						'<a class="card-link" target="_blank" href="https://smash.gg/tournament/'+eventSlug+'">' +
-						  'smash.gg/tournament/'+ eventShortSlug +
-						'</a>')
-
-					i++;
+				} else {
+					return a.date[0]-b.date[0];
 				}
+			});
+			eventList.map(function(event){
+				if (event['active']) {
+					var acc_name = 'current_event_accordion';
+				} else {
+					var acc_name = 'old_event_accordion'
+					$('#old_event_accordion').removeClass('invisible')
+				}
+
+				var eventPropicUrl = event['url_prof'];
+				var eventBannerUrl = event['url_banner'];
+	            if (eventPropicUrl == null){
+	              eventPropicUrl = "https://via.placeholder.com/100/81daea/6A5ACD?text="+event['name'].slice(0,1);
+	            }
+
+				$('#'+acc_name).append(
+					'<div class="card border">' +
+					  '<div class="card-header" style="background-color:whitesmoke;">' +
+					    '<img src="'+eventPropicUrl+'" alt="img" class="rounded" style="height:5vw;">' +
+					    '<button class="btn text-sr-dark collapsed" type="button" data-toggle="collapse" aria-expanded="false"' +
+						    'data-target="#event_collapse_'+i+'" aria-controls="event_collapse_'+i+'" ' +
+						    'id="#event_header_'+i+'" style="box-shadow:none;">' +
+					           event['name'] +
+					    '</button>' +
+					  '</div>' +
+
+					  '<div id="event_collapse_'+i+'" class="collapse" aria-labelledby="event_header_'+i+'" data-parent="#'+acc_name+'">' + 
+					    //'<div id="event_header_'+i+'" class="card-header">' +
+					    //'</div>' + 
+					    '<div id="event_body_'+i+'" class="card-body">' +
+					    '</div>' +
+					    '<div class="card-footer" id="event_date_'+i+'">'+
+					    '</div>' +
+					  '</div>' + 
+					'</div>'
+					);
+
+				
+				var eventDate = new Date(event['date']).toJSON().slice(0,10).replace(/-/g,'/');
+				var eventDateText = eventDate.slice(5,10)+'/'+eventDate.slice(0,4);
+				if (acc_name == 'current_event_accordion'){
+					if (firstDate == null){
+						firstDate = new Date(eventDate);
+					}
+					lastDate = new Date(eventDate);
+				}
+
+				var eventShortSlug = event['shortSlug'];
+				var eventSlug = event['slug'];
+				if (eventShortSlug == null){
+					eventShortSlug = eventSlug;
+				}
+
+				$('#event_body_'+i).append(
+					'<h5 class="card-title">' +
+					  event['name'] +
+					'</h5>' +
+					'<h6 class="card-subtitle text-muted">' +
+					  event['numEntrants'] + ' Entrants   •   ' + event['region'] +
+					'</h6>' +
+					'<p class="card-text">' +
+					'</p>'
+					);
+				$('#event_date_'+i).html(
+					'<span class="text-muted">' + 
+					  eventDateText + 
+					'   •</span>   ' +
+					'<a class="card-link" target="_blank" href="https://smash.gg/tournament/'+eventSlug+'">' +
+					  'smash.gg/tournament/'+ eventShortSlug +
+					'</a>')
+
+				i++;
 			});
 			var eventCountText = ''+i+' Event'
 			if (i >= 2){
