--- a/docs/_includes/player_search.html
+++ b/docs/_includes/player_search.html
@@ -3,7 +3,7 @@
         <form class="col-md-6 py-2">
             <!--<h5>Player Search</h5>-->
             <div class="input-group" id="player_searchbar">
-                <input type="text" class="form-control typeahead" id="query" placeholder="Search..." data-provide="typeahead" autocomplete="on">
+                <input type="text" class="form-control typeahead border border-secondary" id="query" placeholder="Search..." data-provide="typeahead" autocomplete="on">
                 <div class="input-group-append">
                     <button type="submit" class="btn btn-outline-secondary">
                         <i class="fas fa-search"></i>
