--- a/docs/_includes/bootstrap_scripts.html
+++ b/docs/_includes/bootstrap_scripts.html
@@ -1,17 +1,7 @@
-<!-- jQuery and Bootstrap base imports -->
+<!-- jQuery base imports -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
 <!-- Popper.js and Tooltip.js imports -->
 <script type="text/javascript" src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
-<script type="text/javascript" src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
-
-<!-- Bootstrap 4, jQuery 3, DataTables, Buttons, Responsive JS imports  
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.4/r-2.2.2/datatables.min.js"></script>-->
-
-<!--
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
--->
+<!-- <script type="text/javascript" src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>-->
+<!-- Bootstrap 4 base imports -->
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
